--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap');
-
-:root{
-    $black-color: #0B0D17;
-    $color-2: #D0D6F9;
-    $white-color: #FFFFFF;
-
+@import url("https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap");
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .heading {
@@ -60,21 +61,28 @@
   letter-spacing: 2.7px;
 }
 
-.number-text{
-    font-family: 'Barlow Condensed', sans-serif;
-font-weight: 700;
-font-size: 28px;
-line-height: 34px;
-letter-spacing: 4.725px;
-color: #FFFFFF;
-opacity: 0.25;
+.number-text {
+  font-family: 'Barlow Condensed', sans-serif;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 34px;
+  letter-spacing: 4.725px;
+  color: #ffffff;
+  opacity: 0.25;
 }
 
-.body-text {
+.body-text, body {
   font-family: 'Barlow', sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 32px;
 }
 
-
+.home {
+  background: url("../assets/home/background-home-desktop.jpg");
+  height: auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+/*# sourceMappingURL=main.css.map */
