--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -59,6 +59,7 @@
   font-size: 16px;
   line-height: 19px;
   letter-spacing: 2.7px;
+  color: #ffffff;
 }
 
 .number-text {
@@ -78,11 +79,69 @@
   line-height: 32px;
 }
 
+.navigation {
+  height: 96px;
+  margin-left: 55px;
+  margin-bottom: 55px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.navigation-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: rgba(255, 255, 255, 0.04);
+  -webkit-backdrop-filter: blur(40.7742px);
+          backdrop-filter: blur(40.7742px);
+  padding: 0 165px 0 123px;
+}
+
+.navigation-item a {
+  text-decoration: none;
+  margin-right: 48px;
+  position: relative;
+  padding: 38px 0 38px 0;
+}
+
+.navigation-item a span {
+  margin-right: 12px;
+  font-weight: 700;
+}
+
+.active::before, .hover:hover::before {
+  display: block;
+  position: absolute;
+  content: '';
+  z-index: 99;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #ffffff;
+  height: 3px;
+  width: 100%;
+}
+
+.hover:hover::before {
+  opacity: 0.5;
+}
+
 .home {
   background: url("../assets/home/background-home-desktop.jpg");
-  height: auto;
+  height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  padding-top: 40px;
 }
 /*# sourceMappingURL=main.css.map */
