--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,7 +1,8 @@
 .home{
     background: url('../assets/home/background-home-desktop.jpg');
-    height: auto;
+    height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    padding-top: 40px;
 }
