--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -22,32 +22,38 @@ body {
 }
 
 .heading-1 {
+   @extend .heading;
   font-size: 150px;
   line-height: 172px;
 }
 
 .heading-2 {
+   @extend .heading;
   font-size: 100px;
   line-height: 115px;
 }
 
 .heading-3 {
+   @extend .heading;
   font-size: 56px;
   line-height: 64px;
 }
 
 .heading-4 {
+   @extend .heading;
   font-size: 32px;
   line-height: 37px;
 }
 
 .heading-5 {
+  font-family: 'Barlow Condensed', sans-serif;
   font-size: 28px;
   line-height: 34px;
   letter-spacing: 4.725px;
 }
 
 .subheading-1 {
+  @extend .heading;
   font-size: 28px;
   line-height: 32px;
 }
@@ -68,6 +74,7 @@ body {
   line-height: 19px;
   letter-spacing: 2.7px;
   color: $white-color;
+  text-transform: uppercase;
 }
 
 .number-text {
