--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,7 +8,7 @@
           box-sizing: border-box;
 }
 
-.heading {
+.heading, .heading-1, .heading-2, .heading-3, .heading-4, .subheading-1 {
   font-family: 'Bellefair', serif;
   font-weight: 400;
 }
@@ -34,6 +34,7 @@
 }
 
 .heading-5 {
+  font-family: 'Barlow Condensed', sans-serif;
   font-size: 28px;
   line-height: 34px;
   letter-spacing: 4.725px;
@@ -60,6 +61,7 @@
   line-height: 19px;
   letter-spacing: 2.7px;
   color: #ffffff;
+  text-transform: uppercase;
 }
 
 .number-text {
@@ -80,9 +82,9 @@
 }
 
 .navigation {
+  max-width: 1440px;
+  margin: 0 auto;
   height: 96px;
-  margin-left: 55px;
-  margin-bottom: 55px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -92,6 +94,12 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media only screen and (max-width: 1440px) {
+  .navigation {
+    margin-left: 55px;
+  }
 }
 
 .navigation-item {
@@ -105,6 +113,20 @@
   -webkit-backdrop-filter: blur(40.7742px);
           backdrop-filter: blur(40.7742px);
   padding: 0 165px 0 123px;
+  position: relative;
+}
+
+.navigation-item::before {
+  display: block;
+  position: absolute;
+  content: '';
+  z-index: 99;
+  bottom: 46px;
+  left: -22em;
+  background: #ffffff;
+  height: 1px;
+  width: 50%;
+  opacity: 0.25;
 }
 
 .navigation-item a {
@@ -143,5 +165,48 @@
   background-size: cover;
   background-position: center;
   padding-top: 40px;
+}
+
+.home-container {
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 25rem 165px 131px 165px;
+  color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.home-container_travel {
+  width: 450px;
+}
+
+.home-container_travel-heading {
+  margin: 24px 0;
+}
+
+.home-container_explore {
+  width: 274px;
+  height: 274px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #ffffff;
+  color: #0b0d17;
+  border-radius: 50%;
+  text-decoration: none;
 }
 /*# sourceMappingURL=main.css.map */
