--- a/src/styles/_destination.scss
+++ b/src/styles/_destination.scss
@@ -25,7 +25,7 @@
 
       &-details {
         width: 445px;
-        margin-left: 3rem;
+        margin-left: 8rem;
 
         .details-nav {
           margin-bottom: 37px;
@@ -47,6 +47,26 @@
           }
           &-desc {
             margin-bottom: 54px;
+          }
+          &_line{
+            margin-top: 54px;
+            margin-bottom: 28px;
+            width: 100%;
+            height: 1px;
+            background: #383B4B;
+          }
+          &-information{
+            display: flex;
+            align-items: center;
+            text-transform: uppercase;
+
+            .mr-68{
+              margin-right: 68px;
+            }
+
+            .info-heading{
+              margin-bottom: 12px;
+            }
           }
         }
       }
