--- a/src/styles/_destination.scss
+++ b/src/styles/_destination.scss
@@ -9,6 +9,8 @@
   &-container {
     padding: 76px 76px 76px 166px;
     color: white;
+    max-width: 1440px;
+    margin: 0 auto;
 
     &_prompt {
       margin-bottom: 64px;
