--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -224,6 +224,8 @@
 .destination-container {
   padding: 76px 76px 76px 166px;
   color: white;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .destination-container_prompt {
